# SkillMap

./: README.md
backend/: .env.sample  .gitignore  pyproject.toml
backend/app/: ai_parser.py  database.py  graph_analyzer.py  main.py  models.py  schemas.py
backend/app/routers/: artifacts.py  edges.py  export.py  graph.py  import_ai.py  resume.py  skills.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  types.ts
frontend/src/components/: AnalysisPanel.tsx  EdgeForm.tsx  GraphCanvas.tsx  ImportBox.tsx  SkillTable.tsx
