[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "greenlet>=3.5.1",
    "groq>=1.4.0",
    "matplotlib>=3.10.9",
    "networkx>=3.6.1",
    "psycopg2>=2.9.12",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "reportlab>=4.5.1",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
]
